<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">
        <TextView
            android:id="@id/tv_log_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="top"
            android:textColor="@color/black"
            tools:text="@string/lorem_ipsum"/>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@id/tv_log_dismiss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:textSize="24sp"
            android:background="@color/material_blue_grey_200"
            android:text="@string/dismiss"/>
        <TextView
            android:id="@id/tv_log_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:textSize="24sp"
            android:background="@color/material_red_200"
            android:text="@string/clear_logs"
            />
    </LinearLayout>


</LinearLayout>