<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    tools:showIn="@layout/activity_main"
    tools:context=".ui.MainActivity">

    <View
        android:id="@id/nav_drawer_blankspace"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintWidth_percent=".3"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black75"
        app:layout_constraintWidth_percent="0.66">

        <ImageView
            android:id="@id/iv_user_icon"
            android:contentDescription="@string/cd_user_icon"
            android:src="@drawable/user_profile_blank_512"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            />
        <TextView
            android:id="@id/tv_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/iv_user_icon"
            app:layout_constraintRight_toRightOf="@id/iv_user_icon"
            app:layout_constraintTop_toBottomOf="@id/iv_user_icon"
            android:gravity="center"
            android:text="@string/ph_user_name"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <View
            android:id="@id/nav_separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@android:color/white"/>

        <TextView
            android:id="@id/tv_faq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nav_separator"
            app:layout_constraintLeft_toLeftOf="@id/nav_separator"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/faq"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@id/tv_logs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_faq"
            app:layout_constraintLeft_toLeftOf="@id/tv_faq"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:text="@string/logs"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <View
            android:id="@id/nav_separator_bot"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_exit_app"
            android:layout_marginBottom="12dp"
            android:background="@android:color/white"/>

        <TextView
            android:id="@id/tv_exit_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/tv_faq"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="16dp"
            android:text="@string/exit_app"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>